--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,17 @@
       "MyPackage\\": "src/"
     }
   },
+  "extra": {
+    "laravel": {
+      "providers": [
+          "MyPackage\\MyAuthServiceProvider"
+      ]
+    }
+  },
   "minimum-stability": "dev",
   "require": {
-    "php": "8.1.*"
+    "php": "8.1.*",
+    "illuminate/auth": "10.x-dev",
+    "ext-http": "*"
   }
 }
