--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,6 @@
   "minimum-stability": "stable",
   "require": {
     "php": "8.1.*",
-    "illuminate/auth": "10.x",
-    "ext-http": "*"
+    "illuminate/auth": "10.x"
   }
 }
